# embedded-kalman

./: Cargo.toml  README.md
src/: covariance_matrix.rs  lib.rs
src/covariance_matrix/: mod.rs  tests.rs
src/extended_kalman_filter/: mod.rs
src/kalman_filter/: mod.rs  tests.rs
