[package]

name = "embedded-kalman"
version = "0.2.0"
edition = "2021"

authors = ["Jostein Løwer"]
repository = "https://github.com/jostlowe/embedded-kalman.git"
homepage =  "https://github.com/jostlowe/embedded-kalman.git"
license = "MIT"
description = "A Kalman Filtering library designed for use in low-resource embedded systems"
keywords = ["estimation", "kalman"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"